Changes for combatibilty w/ SortConfidences
edited BirdNoBird.py and .yaml

--- a/BirdNoBird.yaml
+++ b/BirdNoBird.yaml
@@ -1,2 +1,3 @@
 foldername: "/Users/amandabreton/Desktop/ECE590/AudioFiles_ToAnalyze"
 CSVpath: "/Users/amandabreton/Desktop/ECE590"
+destination: "/Users/amandabreton/Desktop/ECE590/AudioFiles_DoneAnalyzing/"
